--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -18,9 +18,8 @@
     <div id="listaProduto">
         <div class="embrulho" style="display:nome;">
             <div class="produto">
-                
                 <img src="img/holding-iphone-3.jpeg" alt="">
-                <p>
+                <p>Iphone 1333
                     <span class="valor">R$2000,00</span>
                 </p>
                 <i class="material-icons carrinho" onclick="addProdutoCarrinho()">&#xe8cc;</i>
@@ -30,13 +29,11 @@
     <div id="formulario" style="display: none;">
         <label for="nome">Nome:</label>
         <input type="text" id="nome">
-        <label for="endereco">Endereco:</label>
+        <label for="endereco"> Endereço:</label>
         <input type="text" id="endereco">
-        <label for="cor">Cor:</label>
-        <input type="text" id="cor">
-        <label for="GB">GB:</label>
-        <input type="text" id="GB">
-        <button id="btFinalizar" onclick="enviarPedido()" >Finalizar</button>
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep">
+        <button id="btFinalizar" onclick="enviarPedido()">Finalizar</button>
 
     </div>
 </body>
