--- a/Projeto Final/gerenciarProdutos.html
+++ b/Projeto Final/gerenciarProdutos.html
@@ -5,9 +5,9 @@
     <title>Gerenciar Produtos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https:////maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https:////ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https:////maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <style>
@@ -81,7 +81,7 @@
                         let produto = `{${id} "nome":"${nome}", "valor":"${valor}", "imagem":"${imagem}"}`;
                         console.log(produto);
 
-                        xhttp.open(metodo,"https:lcimports.herokuapp.com/produto/");
+                        xhttp.open(metodo,"https://lcimports.herokuapp.com/produto/");
 
                         xhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
                         xhttp.send(produto);
@@ -94,7 +94,7 @@
 
                     let lsProduto = [];
                     function burcarProduto() {
-                        xhttp.open("GET", "https:lcimports.herokuapp.com/produto/");
+                        xhttp.open("GET","https://lcimports.herokuapp.com/produto/");
                         xhttp.send();
                         xhttp.onload = function () {
                             lsProduto = this.response;
@@ -127,7 +127,7 @@
 
                     function apagar() {
                         let id = document.getElementById('id').value;
-                        xhttp.open("DELETE",`https:lcimports.herokuapp.com/produto/${id}`);
+                        xhttp.open("DELETE",`https://lcimports.herokuapp.com/produto/${id}`);
                         xhttp.send();
                         xhttp.onload = function () {
                             burcarProduto();
